--- a/kaptan/po/nl.po
+++ b/kaptan/po/nl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-11 14:32+0200\n"
+"POT-Creation-Date: 2006-12-11 14:46+0200\n"
 "PO-Revision-Date: 2006-12-12 07:31+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
@@ -35,10 +35,37 @@ msgstr "%Eenmaal-klikken om bestanden en mappen te openen"
 msgid "&Test Wallpaper"
 msgstr "&Test achtergrond"
 
+#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
+#: rc.cpp:72
+#, no-c-format
+msgid ""
+"<b>Package-manager</b> is the graphical front-end of <b>PiSi</b>. With "
+"package-manager you can easily install new programs and upgrade your system. "
+"But also can work in the system tray and periodically checks new upgrades of "
+"the programs that are installed on your system."
+msgstr ""
+
+#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
+#: rc.cpp:16
+#, fuzzy, no-c-format
+msgid ""
+"<b>Pardus </b>is a GNU/Linux distribution, targeting at computer literate "
+"users' basic desktop needs; with acquiring the strong ideas, architecture "
+"and code of other distributions; with a custom configuration framework which "
+"has the ability to evolve into an autonomous system; for simplifying the "
+"installation and usage of the computers."
+msgstr ""
+"Pardus is een GNU/Linux distributie gricht op computergebruikers met "
+"eengemiddelde ervaring;  door de goede ideeën, architectuur en code van "
+"andere distributies te combineren met een eigen configuratieraamwerk dat de "
+"potentie heeft om te groeien tot een autonoom systeem; welk het installeren "
+"en gebruiken van computers sterk vereenvoudigd."
+
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/goodbyedlg.ui line 51
 #: rc.cpp:7
-#, no-c-format
-msgid "<center>You have finished!  Now you can start using Pardus Linux</center>"
+#, fuzzy, no-c-format
+msgid ""
+"<center>You have finished!  Now you can start using <b>Pardus</b></center>"
 msgstr "<center>Gereed! Vanaf nu kunt u Pardus Linux gaan gebruiken</center>"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 58
@@ -73,35 +100,30 @@ msgstr "De achtergrond niet veranderen!"
 #: rc.cpp:55
 #, no-c-format
 msgid "Dou&ble-click to open files and folders (select icons on first click)"
-msgstr "Du&bbel-klikken om bestanden en mappen te openen (selecteer icoon bij eerste klik)"
+msgstr ""
+"Du&bbel-klikken om bestanden en mappen te openen (selecteer icoon bij eerste "
+"klik)"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 27
 #: rc.cpp:78
-#, no-c-format
+#, fuzzy, no-c-format
 msgid ""
-"Here, you can select a style for your desktop. Pardus provides some eye "
-"candy styles for you."
+"Here, you can select a <b>style </b>for your desktop. <b>Pardus</b> provides "
+"some eye candy styles for you."
 msgstr ""
 "Hier kunt u een stijl voor uw bureaublad kiezen. Pardus voorziet u van "
 "oogstrelende stijlen."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 27
 #: rc.cpp:23
-#, no-c-format
+#, fuzzy, no-c-format
 msgid ""
-"Here, you can select a wallpaper for your desktop background. Pardus "
-"provides eye candy wallpapers, you can select one of them, as you wish."
+"Here, you can select a <b>wallpaper</b> for your desktop background. "
+"<b>Pardus</b> provides eye candy wallpapers, you can select one of them, as "
+"you wish."
 msgstr ""
 "Hier kunt u een achtergrond voor uw bureaublad kiezen. Pardus voorziet u van "
 "oogstrelende achtergronden, waarvan u, als u wilt, er één kunt selecteren."
-
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/packagedlg.ui line 133
-#: rc.cpp:72
-#, no-c-format
-msgid ""
-"Here, you can select default behaviour of package-manager, software manager "
-"for Pardus."
-msgstr "Hier kunt u het standaardgedrag van uw pakketmanager kiezen, de softwaremanager van Padus."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 27
 #: rc.cpp:39
@@ -112,7 +134,8 @@ msgid ""
 "below. You can also select default click behaviour."
 msgstr ""
 "Als u linkshandig bent, dan kunt u de knoppen van uw aanwijsapparaat "
-"omwisselen met onderstaande optie. U kunt ook het standaard klikgedrag aanpassen."
+"omwisselen met onderstaande optie. U kunt ook het standaard klikgedrag "
+"aanpassen."
 
 #: ../src/main.cpp:18
 msgid "Kaptan Desktop"
@@ -141,20 +164,6 @@ msgstr "Netwerk instellen"
 #, no-c-format
 msgid "Package Manager"
 msgstr "Pakketmanager"
-
-#. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
-#: rc.cpp:16
-#, no-c-format
-msgid ""
-"Pardus is a GNU/Linux distribution, targeting at computer literate users' "
-"basic desktop needs; with acquiring the strong ideas, architecture and code "
-"of other distributions; with a custom configuration framework which has the "
-"ability to evolve into an autonomous system; for simplifying the "
-"installation and usage of the computers."
-msgstr ""
-"Pardus is een GNU/Linux distributie gricht op computergebruikers met een"
-"gemiddelde ervaring;  door de goede ideeën, architectuur en code van andere "
-"distributies te combineren met een eigen configuratieraamwerk dat de potentie heeft om te groeien tot een autonoom systeem; welk het installeren en gebruiken van computers sterk vereenvoudigd."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 85
 #: rc.cpp:45
@@ -231,3 +240,9 @@ msgstr "Achtergrond instellen"
 msgid "Welcome"
 msgstr "Welkom"
 
+#~ msgid ""
+#~ "Here, you can select default behaviour of package-manager, software "
+#~ "manager for Pardus."
+#~ msgstr ""
+#~ "Hier kunt u het standaardgedrag van uw pakketmanager kiezen, de "
+#~ "softwaremanager van Padus."
