--- a/trunk/tasma/network-manager/po/nl.po
+++ b/trunk/tasma/network-manager/po/nl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 11:26+0200\n"
-"PO-Revision-Date: 2006-12-07 21:37+0200\n"
+"PO-Revision-Date: 2006-12-13 20:27+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -69,7 +69,7 @@ msgstr "Verbinding verwijderen?"
 
 #: browser.py:205
 msgid "No device!"
-msgstr ""
+msgstr "Geen apparaat!"
 
 #: browser.py:381 network-applet.py:395
 msgid "New connection"
@@ -241,26 +241,25 @@ msgstr "Er is nog geen pakket met COMAR netwerkscripts geïnstalleerd."
 
 #: network-applet.py:242
 msgid "Firewall..."
-msgstr ""
+msgstr "Firewall..."
 
 #: network-applet.py:243
-#, fuzzy
 msgid "Edit Connections..."
-msgstr "Verbinding"
+msgstr "Bewerk verbindingen..."
 
 #: network-applet.py:245
 msgid "Icon Per Device"
-msgstr ""
+msgstr "Icoon per apparaat"
 
 #: network-applet.py:246
 msgid "Single Icon"
-msgstr ""
+msgstr "Enkel icoon"
 
 #: network-applet.py:290
 msgid "Should network-applet start automatically when you login?"
-msgstr ""
+msgstr "Dient de netwerk-applet automatisch te starten als u inlogt?"
 
 #: network-applet.py:430
-#, fuzzy
 msgid "Network Applet"
-msgstr "Netwerkinstellingen"
+msgstr "Netwerk-applet"
+
