--- a/trunk/kaptan/po/nl.po
+++ b/trunk/kaptan/po/nl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 20:44+0200\n"
-"PO-Revision-Date: 2006-12-13 06:57+0200\n"
+"PO-Revision-Date: 2006-12-25 22:43+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr " uren"
 #: rc.cpp:52 ../src/mousedlg.cpp:122
 #, no-c-format
 msgid "&Single-click to open files and folders"
-msgstr "%Eenmaal-klikken om bestanden en mappen te openen"
+msgstr "&Eenmaal-klikken om bestanden en mappen te openen"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 134
 #: rc.cpp:33 ../src/wallpaperdlg.cpp:99
@@ -43,7 +43,7 @@ msgid ""
 "package-manager you can easily install new programs and upgrade your system. "
 "But also can work in the system tray and periodically checks new upgrades of "
 "the programs that are installed on your system."
-msgstr "<b>Pakket-manager</b> is de grafische interface van <b>PiSi</b>. Met pakketmanager kunt u met gemak nieuwe programma's installeren en opwaarderen op uw systeem. Maar het kan ook actief zijn in het systeemvak en in periodes controleren voor op te 'waarderen programma's welk geïnstalleerd zijn op uw systeem."
+msgstr "<b>Pakketbeheer</b> is de grafische interface van <b>PiSi</b>. Met pakketbeheer kunt u met gemak nieuwe programma's installeren en opwaarderen op uw systeem. Maar het kan ook actief zijn in het systeemvak en periodiek controleren voor op te waarderen pakketten welk op uw systeem geïnstalleerd zijn."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/welcomedlg.ui line 38
 #: rc.cpp:16 ../src/welcomedlg.cpp:67
@@ -55,11 +55,10 @@ msgid ""
 "has the ability to evolve into an autonomous system; for simplifying the "
 "installation and usage of the computers."
 msgstr ""
-"<b>Pardus</b> is een GNU/Linux distributie gricht op computergebruikers met "
-"eengemiddelde ervaring;  door de goede ideeën, architectuur en code van "
-"andere distributies te combineren met een eigen configuratieraamwerk dat de "
-"potentie heeft om te groeien tot een autonoom systeem; welk het installeren "
-"en gebruiken van computers sterk vereenvoudigd."
+"<b>Pardus</b> is een GNU/Linux distributie gericht op computergebruikers met gemiddelde ervaring. Door goede ideeën, architectuur en code van "
+"andere distributies te combineren met een eigen configuratieraamwerk, met "
+"potentie om door te groeien tot een autonoom systeem, zal zal het het installeren "
+"en gebruiken van computers sterk vereenvoudigen."
 
 #: ../src/network.cpp:42
 msgid "<big>Loading...</big>"
@@ -69,7 +68,7 @@ msgstr "<big>Laden...</big>"
 #: rc.cpp:7 ../src/goodbyedlg.cpp:67
 #, no-c-format
 msgid "<center>You have finished!  Now you can start using <b>Pardus</b></center>"
-msgstr "<center>Gereed! Vanaf nu kunt u <b>Pardus</b> Linux gaan gebruiken</center>"
+msgstr "<center>Gereed! Vanaf nu kunt u <b>Pardus</b> gaan gebruiken</center>"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 58
 #: rc.cpp:42 ../src/mousedlg.cpp:118
@@ -114,7 +113,7 @@ msgid ""
 "Here, you can select a <b>style </b>for your desktop. <b>Pardus</b> provides "
 "some eye candy styles for you."
 msgstr ""
-"Hier kunt u een stijl voor uw bureaublad kiezen. <b>Pardus</b> voorziet u van "
+"Hier kunt u een <b>stijl</b> voor uw bureaublad kiezen. <b>Pardus</b> voorziet u van "
 "oogstrelende stijlen."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/wallpaperdlg.ui line 27
@@ -125,7 +124,7 @@ msgid ""
 "<b>Pardus</b> provides eye candy wallpapers, you can select one of them, as "
 "you wish."
 msgstr ""
-"Hier kunt u een achtergrond voor uw bureaublad kiezen. <b>Pardus</b> voorziet u van "
+"Hier kunt u een <b>achtergrond</b> voor uw bureaublad kiezen. <b>Pardus</b> voorziet u van "
 "oogstrelende achtergronden, waarvan u, als u wilt, er één kunt selecteren."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 27
@@ -166,7 +165,7 @@ msgstr "Netwerk instellen"
 #: rc.cpp:59 ../src/kaptan.cpp:61 ../src/packagedlg.cpp:101
 #, no-c-format
 msgid "Package Manager"
-msgstr "Pakketmanager"
+msgstr "Pakketbeheer"
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/mousedlg.ui line 85
 #: rc.cpp:45 ../src/mousedlg.cpp:119
@@ -217,8 +216,8 @@ msgid ""
 "desktop :)."
 msgstr ""
 "Dit programma, genaamd <b>Kaptan Desktop</b>, zal u helpen om uw <b>Pardus</"
-"b>-desktop in enkele eenvoudige stappen in te stellen. Het programma zal ook "
-"enkele basis configurate instellingen maken voor een betere desktop :)."
+"b> desktop in enkele eenvoudige stappen in te stellen. Het programma zal ook "
+"enkele basis configuratie instellingen maken voor een betere desktop :)."
 
 #. i18n: file /home/caglar/svn/uludag/trunk/kaptan/po/../src/styledlg.ui line 54
 #: rc.cpp:84 ../src/styledlg.cpp:97
