--- a/trunk/tasma/tasma/po/nl.po
+++ b/trunk/tasma/tasma/po/nl.po
@@ -1,4 +1,4 @@
-# translation of tasma.po to Nederlands
+# translation of nl.po to Nederlands
 # translation of tasma.po to
 # This file is put in the public domain.
 #
@@ -6,10 +6,10 @@
 # Rinse de Vries <RinseDeVries@home.nl>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: tasma\n"
+"Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-12-24 07:24+0200\n"
-"PO-Revision-Date: 2006-11-26 16:06+0200\n"
+"PO-Revision-Date: 2006-12-26 00:52+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,7 @@ msgid ""
 "presented in TASMA. "
 msgstr ""
 "TASMA is het configuratieprogramma van Pardus. U kunt "
-"de standaardinstellingen van het system aanpassen door via modules in TASMA. "
+"de standaardinstellingen van het system aanpassen via modules in TASMA. "
 
 #: aboutview.cpp:99
 msgid ""
@@ -43,8 +43,8 @@ msgid ""
 msgstr ""
 "Voor beter begrip, zijn de modules gegroepeerd in categorieën. U kunt "
 "een categorie activeren door deze links te selecteren. Na activatie "
-"zal deze categorie worden weergeven met pictogrammen in het rechter paneel. U kunt vervolgens"
-"de configuratiemodule starten door op het pictogram te (dubbel)klikken."
+"zal deze categorie worden weergeven met iconen in het rechter paneel. U kunt vervolgens "
+"de configuratiemodule starten door op het icoon te (dubbel)klikken."
 
 #: main.cpp:62
 msgid "TASMA - Pardus Configuration Center"
