--- a/trunk/tasma/service-manager/po/nl.po
+++ b/trunk/tasma/service-manager/po/nl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-07 21:36+0200\n"
-"PO-Revision-Date: 2006-11-26 15:40+0200\n"
+"PO-Revision-Date: 2006-12-26 00:56+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +34,7 @@ msgstr "Toegang geweigerd"
 
 #: src/service-manager.py:187
 msgid "COMAR script execution failed."
-msgstr "COMAR-script uitvoeren is mislukt."
+msgstr "COMAR script uitvoeren is mislukt."
 
 #: src/service-manager.py:187
 msgid "Script Error"
@@ -42,7 +42,7 @@ msgstr "Scriptfout"
 
 #: src/service-manager.py:192
 msgid "Unable to start service."
-msgstr "De dienst kan niet gestart worden."
+msgstr "Dienst kan niet gestart worden."
 
 #: src/service-manager.py:192 src/service-manager.py:195
 msgid "Failed"
@@ -50,7 +50,7 @@ msgstr "Mislukt"
 
 #: src/service-manager.py:195
 msgid "Unable to stop service."
-msgstr "De dienst kan niet gestopt worden."
+msgstr "Dienst kan niet gestopt worden."
 
 #: src/service-manager.py:224 src/mainform.py:101
 msgid "Select a service from list."
